--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
             <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
-        <div class="col col-sm order-sm-first col-md">
+        <div class="col col-sm order-sm-first col-md d-none d-sm-block">
             <h2>Uthappizza</h2>
             <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe
                 vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
@@ -46,7 +46,7 @@
         <div class="col-12 col-sm-4 col-md-3">
             <h3>This Month's Promotions</h3>
         </div>
-        <div class="col col-sm col-md">
+        <div class="col col-sm col-md d-none d-sm-block">
             <h2>Weekend Grand Buffet</h2>
             <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
                 main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
@@ -58,7 +58,7 @@
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
             <h3>Meet our Culinary Specialists</h3>
         </div>
-        <div class="col col-sm order-sm-first col-md">
+        <div class="col col-sm order-sm-first col-md d-none d-sm-block">
             <h2>Alberto Somayya</h2>
             <h4>Executive Chef</h4>
             <p>Award winning three-star Michelin chef with wide International experience having worked closely with
