--- a/index.html
+++ b/index.html
@@ -78,6 +78,83 @@
         </div>
     </div>
 </div>
+<div id="reserveModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Reserve a Table</h4>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="reserve-table">
+                    <div class="form-group row">
+                        <label for="guests" class="col-12 col-sm-2 col-form-label">Number of
+                            Guests</label>
+                        <div class="col-12 col-sm-9" id="guests">
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="1" value="1" name="guests">
+                                <label class="custom-control-label" for="1">1</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="2" value="2" name="guests">
+                                <label class="custom-control-label" for="2">2</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="3" value="3" name="guests">
+                                <label class="custom-control-label" for="3">3</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="4" value="4" name="guests">
+                                <label class="custom-control-label" for="4">4</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="5" value="5" name="guests">
+                                <label class="custom-control-label" for="5">5</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" class="custom-control-input" id="6" value="6" name="guests">
+                                <label class="custom-control-label" for="6">6</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="section" class="col-12 col-sm-2 col-form-label">Section</label>
+                        <div class="btn-group btn-group-toggle col-12 col-sm" data-toggle="buttons" id="section">
+                            <label class="btn btn-success active">
+                                <input type="radio" name="nonsmoking" id="nonsmoking" autocomplete="off" checked>Non-Smoking
+                            </label>
+                            <label class="btn btn-danger">
+                                <input type="radio" name="smoking" id="smoking" autocomplete="off">Smoking
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="date" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                        <div class="col-12 col-sm-4">
+                            <input type="date" class="form-control" id="date" name="date"
+                                   placeholder="Date">
+                        </div>
+                        <div class="col-12 col-sm-4">
+                            <input type="time" class="form-control" id="time" name="time"
+                                   placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-sm-2 col-md-10">
+                            <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel
+                            </button>
+                            <button type="submit" class="btn btn-primary ml-auto">
+                                Reserve
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <header class="jumbotron">
     <div class="container">
         <div class="row row-header">
@@ -90,10 +167,8 @@
                 <img src="img/logo.png" class="img-fluid" alt="logo">
             </div>
             <div class="col-12 col-sm-3 align-self-center">
-                <a href="#reserve-table" class="btn btn-warning btn-block nav-link"
-                   data-toggle="tooltip" data-html="true"
-                   title="Or Call us at <br><strong>+852 12345678</strong>"
-                   data-placement="bottom" role="button">Reserve Table</a>
+                <a class="btn btn-warning btn-block nav-link text-white"
+                   role="button" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
             </div>
         </div>
     </div>
@@ -105,7 +180,7 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-sm-block">
                             <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
                                     class="badge badge-pill badge-secondary">$4.99</span></h2>
                             <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
@@ -124,7 +199,7 @@
                     </div>
                     <div class="carousel-item">
                         <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-sm-block">
                             <h2>Alberto Somayya</h2>
                             <h4>Executive Chef</h4>
                             <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
@@ -205,69 +280,6 @@
             </div>
         </div>
     </div>
-    <div class="row row-content align-items-center">
-        <div class="col-12 col-sm-2">
-        </div>
-        <div class="col-12 col-sm-8">
-            <div class="card">
-                <h3 class="card-header text-white bg-warning">Reserve a Table</h3>
-                <div class="card-body">
-                    <form id="reserve-table">
-                        <div class="form-group row">
-                            <label for="guests" class="col-12 col-sm-2 col-form-label">Number of
-                                Guests</label>
-                            <div class="col-12 col-sm-9" id="guests">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="1" value="1" name="guests">
-                                    <label class="custom-control-label" for="1">1</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="2" value="2" name="guests">
-                                    <label class="custom-control-label" for="2">2</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="3" value="3" name="guests">
-                                    <label class="custom-control-label" for="3">3</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="4" value="4" name="guests">
-                                    <label class="custom-control-label" for="4">4</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="5" value="5" name="guests">
-                                    <label class="custom-control-label" for="5">5</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="6" value="6" name="guests">
-                                    <label class="custom-control-label" for="6">6</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="date" class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                            <div class="col-12 col-sm-4">
-                                <input type="date" class="form-control" id="date" name="date"
-                                       placeholder="Date">
-                            </div>
-                            <div class="col-12 col-sm-4">
-                                <input type="time" class="form-control" id="time" name="time"
-                                       placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-sm-2 col-md-10">
-                                <button type="submit" class="btn btn-primary">
-                                    Reserve
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-sm-2">
-        </div>
-    </div>
 </div>
 <footer class="footer">
     <div class="container">
@@ -319,9 +331,5 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>$(document).ready(function () {
-    $('[data-toggle="tooltip"]').tooltip();
-});
-</script>
 </body>
 </html>
