--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
             <span class="navbar-text">
-                <a data-toggle="modal" data-target="#loginModal">
+                <a id="loginButton">
                     <span class="fa fa-sign-in"></span> Login
                 </a>
             </span>
@@ -44,7 +44,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Login</h4>
-                <button type="button" class="close" data-dismiss="modal">
+                <button type="button" class="close closeLoginModal">
                     &times;
                 </button>
             </div>
@@ -63,13 +63,13 @@
                         </div>
                         <div class="col-sm-auto">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox">
-                                <label class="form-check-label"> Remember me</label>
+                                <input class="form-check-input" type="checkbox" id="remember">
+                                <label class="form-check-label" for="remember"> Remember me</label>
                             </div>
                         </div>
                     </div>
                     <div class="form-row">
-                        <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel
+                        <button type="button" class="btn btn-secondary btn-sm ml-auto closeLoginModal">Cancel
                         </button>
                         <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                     </div>
@@ -83,7 +83,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Reserve a Table</h4>
-                <button type="button" class="close" data-dismiss="modal">
+                <button type="button" class="close closeReserveModal">
                     &times;
                 </button>
             </div>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="offset-sm-2 col-md-10">
-                            <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel
+                            <button type="button" class="btn btn-secondary ml-auto closeReserveModal">Cancel
                             </button>
                             <button type="submit" class="btn btn-primary ml-auto">
                                 Reserve
@@ -168,7 +168,7 @@
             </div>
             <div class="col-12 col-sm-3 align-self-center">
                 <a class="btn btn-warning btn-block nav-link text-white"
-                   role="button" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                   role="button" id="reserveButton">Reserve Table</a>
             </div>
         </div>
     </div>
@@ -349,6 +349,18 @@
                 carouselButton.children('span').removeClass('fa-play');
                 carouselButton.children('span').addClass('fa-pause');
             }
+        });
+        $('#loginButton').click(function () {
+            $('#loginModal').modal('show');
+        });
+        $('.closeLoginModal').click(function () {
+            $('#loginModal').modal('hide')
+        });
+        $('#reserveButton').click(function () {
+            $('#reserveModal').modal('show');
+        });
+        $('.closeReserveModal').click(function () {
+            $('#reserveModal').modal('hide')
         });
     });
 </script>
