--- a/index.html
+++ b/index.html
@@ -334,35 +334,6 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>
-    $(document).ready(function () {
-        const myCarousel = $('#mycarousel');
-        const carouselButton = $('#carouselButton');
-        myCarousel.carousel({interval: 2000});
-        carouselButton.click(function () {
-            if (carouselButton.children('span').hasClass('fa-pause')) {
-                myCarousel.carousel('pause');
-                carouselButton.children('span').removeClass('fa-pause');
-                carouselButton.children('span').addClass('fa-play');
-            } else {
-                myCarousel.carousel('cycle');
-                carouselButton.children('span').removeClass('fa-play');
-                carouselButton.children('span').addClass('fa-pause');
-            }
-        });
-        $('#loginButton').click(function () {
-            $('#loginModal').modal('show');
-        });
-        $('.closeLoginModal').click(function () {
-            $('#loginModal').modal('hide')
-        });
-        $('#reserveButton').click(function () {
-            $('#reserveModal').modal('show');
-        });
-        $('.closeReserveModal').click(function () {
-            $('#reserveModal').modal('hide')
-        });
-    });
-</script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
